# RMoney_Bhavcopy

./: README.md  pyproject.toml
RmoneyBhavcopy_Docs/: mkdocs.yml
RmoneyBhavcopy_Docs/docs/: index.md
RmoneyBhavcopy_Docs/site/: index.html
RmoneyBhavcopy_Docs/site/search/: search_index.json
src/Rmoney_bhavcopy/: Bhavcopy_Reteriver.py  __init__.py  config.py
src/bhavcopy/: __init__.py  config.py  reterive.py
test/: test_reterive.py
