[project]
name = "bhavcopy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "deepanshu.mangolia", email = "deepanshu.mangolia@rmoneyindia.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
