[project]
name = "Rmoney_bhavcopy"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "deepanshu.mangolia", email = "deepanshu.mangolia@rmoneyindia.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.5.50",
    "mkdocs>=1.6.1",
    "pytest>=8.3.4",
]
